--- a/ubi/package.json
+++ b/ubi/package.json
@@ -8,7 +8,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.83.0"
+    "semantic-ui-react": "^0.83.0",
+    "validator": "^10.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
