--- a/ubi/package.json
+++ b/ubi/package.json
@@ -14,7 +14,8 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
-    "validator": "^10.9.0"
+    "validator": "^10.9.0",
+    "video-react": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
